--- a/helmets.html
+++ b/helmets.html
@@ -25,16 +25,12 @@
         <h2>Wiki Categories</h2>
         <div class="muted">Local pages (fast) + one official button above.</div>
         <div class="nav">
-          <a class="" href="wiki.html"><span>Hub</span><span class="small">→</span></a>
-<a class="active" href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
-<a class="" href="masks.html"><span>Masks</span><span class="small">→</span></a>
-<a class="" href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
-<a class="" href="armor.html"><span>Armor</span><span class="small">→</span></a>
-<a class="" href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
-<a class="" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
-<a class="" href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
-<a class="" href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
-<a class="" href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
+          <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
+          <a class="active" href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
+          <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
+          <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
+          <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
+          <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
         </div>
       </div>
 
@@ -42,13 +38,13 @@
         <div class="hero">
           <div>
             <h1>Helmets</h1>
-            <div class="sub">Fast local list pulled into a clean layout. Click an item to open the official page.</div>
+            <div class="sub">Pulled from official DeadPoly wiki file names (hotlinked via Special:FilePath).</div>
           </div>
           <div class="badge" id="countBadge">0 items</div>
         </div>
 
         <div class="toolbar">
-          <input id="q" class="search" placeholder="Search Helmets..." />
+          <input id="q" class="search" placeholder="Search helmets..." />
           <div class="pills" id="pills"></div>
           <div class="viewtoggle">
             <button class="btn" id="gridBtn" type="button">Cards</button>
@@ -65,92 +61,52 @@
           </table>
         </div>
 
-        <div id="extras"></div>
+        <div class="section">
+          <h2>Notes</h2>
+          <div class="small muted">If an image ever shows blank: it usually means the filename changed on the official wiki.</div>
+        </div>
       </div>
     </div>
   </div>
 
   <script src="wiki-shared.js"></script>
-  <!-- page script -->
   <script>
+    // From official page content (names + files)
+    const DATA = [
+      { name:"Armor Helmet", image:"ArmorHelmet_I.png", tags:["Armor"] },
+      { name:"Baby Bunny Hat", image:"BabyBunnyHat_I.png", tags:["Cosmetic"] },
+      { name:"Barbarian Helmet", image:"BarbarianHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Berserker Helmet", image:"BerserkerHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Bunny Helmet", image:"BunnyHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Chainsaw Helmet", image:"ChainsawHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Combat Helmet", image:"CombatHelmet_I.png", tags:["Armor"] },
+      { name:"Construction Helmet", image:"ConstructionHelmet_I.png", tags:["Utility"] },
+      { name:"Crown of the Trickster", image:"TM_LokiHelm_I.png", tags:["Cosmetic"] },
+      { name:"Devil Helmet", image:"DevilHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Fire Helmet", image:"FireHelmet_I.png", tags:["Utility"] },
+      { name:"Gas Mask Helmet", image:"GasMaskHelmet_I.png", tags:["Utility"] },
+      { name:"Hazmat Helmet", image:"HazmatHelmet_I.png", tags:["Utility"] },
+      { name:"Knight Helmet", image:"KnightHelmet_I.png", tags:["Cosmetic"] },
+      { name:"Metal Helmet", image:"MetalHelmet_I.png", tags:["Armor"] },
+      { name:"Motorcycle Helmet", image:"MotorcycleHelmet_I.png", tags:["Utility"] },
+      { name:"Reaper Hood", image:"ReaperHood_I.png", tags:["Cosmetic"] },
+      { name:"Riot Helmet", image:"RiotHelmet_I.png", tags:["Armor"] },
+      { name:"Samurai Helmet", image:"SamuraiHelmet_I.png", tags:["Cosmetic"] },
+      { name:"SWAT Helmet", image:"SwatHelmet_I.png", tags:["Armor"] }
+    ];
 
-const DATA = [{"file": "TM HaloMK5 Blue I.png", "name": "Mk V Spartan Helmet (Blue)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HaloMK5 Green I.png", "name": "Mk V Spartan Helmet (Green)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HaloMK5 Red I.png", "name": "Mk V Spartan Helmet (Red)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HatChef I.png", "name": "Chef Hat", "armor": "??", "notes": "Its the hat of a chef"}, {"file": "TM HeavyHelmet I.png", "name": "Heavy Helmet", "armor": "1-15", "notes": "Pretty gnarly looking viking helmet"}, {"file": "TM HelmetCenturion 1 Blue I.png", "name": "Centurion Helmet (Blue)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetCenturion 1 Red I.png", "name": "Centurion Helmet (Red)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetCenturion 2 Blue I.png", "name": "Centurion Helmet (Blue)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetCenturion 2 Red I.png", "name": "Centurion Helmet (Red)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetCenturion 3 Blue I.png", "name": "Centurion Helmet (Blue)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetCenturion 3 Red I.png", "name": "Centurion Helmet (Red)", "armor": "1-15", "notes": "Comes in 1 other color"}, {"file": "TM HelmetClown I.png", "name": "Clown Mask", "armor": "1-15", "notes": "Hi Georgie!"}, {"file": "TM HelmetCrown I.png", "name": "Crown", "armor": "1-15", "notes": "Long live the King!"}, {"file": "TM HelmetDaft I.png", "name": "Daft Punk", "armor": "1-15", "notes": "Like the legend of the Pheonix"}, {"file": "TM HelmetDeadmau5 I.png", "name": "Dead Mau5", "armor": "1-15", "notes": "Marshmello Ripoff?"}, {"file": "TM HelmetFirefighter 1 I.png", "name": "Fire Fighter Helmet (Red)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HelmetFirefighter 2 I.png", "name": "Fire Fighter Helmet (Red)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HelmetFirefighter 3 I.png", "name": "Fire Fighter Helmet (Red)", "armor": "1-15", "notes": "Comes in 2 other colors"}, {"file": "TM HelmetFootball 1 I.png", "name": "Football Helmet (Red w/ blue stripes)", "armor": "1-15", "notes": "Comes in 3 other colors"}, {"file": "TM HelmetFootball 2 I.png", "name": "Football Helmet (Black w/ red stripes)", "armor": "1-15", "notes": "Comes in 3 other colors"}, {"file": "TM HelmetFootball 3 I.png", "name": "Football Helmet (White w/ black stripes)", "armor": "1-15", "notes": "Comes in 3 other colors"}, {"file": "TM HelmetFootball 4 I.png", "name": "Football Helmet (Yellow w/ purple stripes)", "armor": "1-15", "notes": "Comes in 3 other colors"}, {"file": "TM HelmetFootballMod 1 I.png", "name": "Football Helmet (Purple w/ yellow stripes)", "armor": "1-15", "notes": "Modded out apocalypse helmet"}, {"file": "TM HelmetFootballMod 2 I.png", "name": "Football Helmet (Yellow w/ purple stripes)", "armor": "1-15", "notes": "Modded out apocalypse helmet"}, {"file": "TM HelmetFootballMod 3 I.png", "name": "Football Helmet (Blue w/ green stripes)", "armor": "1-15", "notes": "Modded out apocalypse helmet"}, {"file": "TM HelmetFootballMod 4 I.png", "name": "Football Helmet (Orange w/ green stripes)", "armor": "1-15", "notes": "Modded out apocalypse helmet"}, {"file": "TM HelmetFootballMod 5 I.png", "name": "Football Helmet (Red w/ green stripes)", "armor": "1-15", "notes": "Modded out apocalypse helmet"}, {"file": "TM HelmetHardHat 1 E.png", "name": "Hard Hat (Orange)", "armor": "1-15", "notes": "Construction Hat"}, {"file": "TM HelmetHardHat 2 E.png", "name": "Hard Hat (Blue)", "armor": "1-15", "notes": "Construction Hat"}, {"file": "TM HelmetHardHat 3 E.png", "name": "Hard Hat (Green)", "armor": "1-15", "notes": "Construction Hat"}, {"file": "TM HelmetHardHat 4 E.png", "name": "Hard Hat (White)", "armor": "1-15", "notes": "Construction Hat"}, {"file": "TM HelmetKabuto I.png", "name": "Kabuto Helmet", "armor": "1-15", "notes": "Typical helmet you'd see a samurai wearing"}, {"file": "TM HelmetKingsFlame.png", "name": "Flame of the Fallen King Crown", "armor": "1-15", "notes": "Very rare crown (6 colors)"}, {"file": "TM HelmetKnight 1 I.png", "name": "Knight Helmet (Red Striped)", "armor": "1-15", "notes": "The Helmet worn by a Knight"}, {"file": "TM HelmetKnight 2 I.png", "name": "Knight Helmet (Blue Striped)", "armor": "1-15", "notes": "The Helmet worn by a Knight"}, {"file": "TM HelmetKnight 3 I.png", "name": "Knight Helmet (Green Striped)", "armor": "1-15", "notes": "The Helmet worn by a Knight"}, {"file": "TM HelmetKnight 4 I.png", "name": "Knight Helmet (Black)", "armor": "1-15", "notes": "Not a reference to Fortnite or anything"}, {"file": "TM HelmetKnight 5 I.png", "name": "Knight Helmet (Tan)", "armor": "1-15", "notes": "The Helmet worn by a Knight"}, {"file": "TM HelmetKnight 6 I.png", "name": "Knight Helmet (Purple Striped)", "armor": "1-15", "notes": "The Helmet worn by a Knight"}, {"file": "TM HelmetMando I.png", "name": "Mandalorian Helmet", "armor": "1-15", "notes": "This is the way"}, {"file": "TM HelmetMarshmello I.png", "name": "Marshmello Mask", "armor": "1-15", "notes": "Better than DeadMau5"}, {"file": "TM HelmetMegaMan I.png", "name": "Mega Man Helmet", "armor": "1-15", "notes": "Childhood icon"}, {"file": "TM MilitaryBlack I.png", "name": "Military Helmet (Black)", "armor": "1-15", "notes": "Modern military grade helmet."}, {"file": "TM MilitaryGreen I.png", "name": "Military Helmet (Green)", "armor": "1-15", "notes": "Modern military grade helmet."}, {"file": "TM HelmetMilitaryAce 1 I.png", "name": "Military Helmet (Green)", "armor": "1-15", "notes": "Vietnam era look"}, {"file": "TM HelmetMilitaryAce 2 I.png", "name": "Military Helmet (Tan)", "armor": "1-15", "notes": "Vietnam era look"}, {"file": "TM HelmetMilitaryAce 3 I.png", "name": "Military Helmet (Black)", "armor": "1-15", "notes": "Vietnam era look"}, {"file": "TM HelmetMilitaryGhillie 1 I.png", "name": "Ghili Military Helmet (Tan)", "armor": "1-15", "notes": "Camouflage helmet"}, {"file": "TM HelmetMilitaryGhillie 2 I.png", "name": "Ghili Military Helmet (Black)", "armor": "1-15", "notes": "Camouflage helmet"}, {"file": "TM HelmetMilitaryGhillie 3 I.png", "name": "Ghili Military Helmet (Grey)", "armor": "1-15", "notes": "Camouflage helmet"}, {"file": "TM HelmetMilitaryGhillie 4 I.png", "name": "Ghili Military Helmet (Green/Brown)", "armor": "1-15", "notes": "Camouflage helmet"}, {"file": "TM HelmetOffroad 1 I.png", "name": "Offroad Helmet (Red)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetOffroad 2 I.png", "name": "Offroad Helmet (White)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetOffroad 3 I.png", "name": "Offroad Helmet (Green)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetOffroad 4 I.png", "name": "Offroad Helmet (Blue)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetOffroad 5 I.png", "name": "Offroad Helmet (Purple)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetOffroad 6 I.png", "name": "Offroad Helmet (Yellow)", "armor": "1-15", "notes": "Protect your head"}, {"file": "TM HelmetPumkin E.png", "name": "Pumpkin Head", "armor": "1-15", "notes": "Halloween"}, {"file": "TM HelmetRacer 1 I.png", "name": "Racer Helmet (White w/ Red Stripes)", "armor": "1-15", "notes": "Helmet for races"}, {"file": "TM HelmetRacer 2 I.png", "name": "Racer Helmet (White w/ Blue Stripes)", "armor": "1-15", "notes": "Helmet for races"}, {"file": "TM HelmetRacer 3 I.png", "name": "Racer Helmet (White w/ Green Stripes)", "armor": "1-15", "notes": "Helmet for races"}, {"file": "TM HelmetRacer 4 I.png", "name": "Racer Helmet (Black w/ Yellow Stripes)", "armor": "1-15", "notes": "Helmet for races"}, {"file": "TM HelmetRaidBlack I.png", "name": "Raid Helmet (Black)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidGray I.png", "name": "Raid Helmet (Grey)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidGreen I.png", "name": "Raid Helmet (Green)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidTan I.png", "name": "Raid Helmet (Tan)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidBlack 2 I.png", "name": "Raid Helmet (Black w/ Gold Spikes)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidRed I.png", "name": "Raid Helmet (Red w/ Black Spikes)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidTan 2 I.png", "name": "Raid Helmet (Tan w/ Gold Spikes)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRaidSilver I.png", "name": "Raid Helmet (Silver w/ Black Spikes)", "armor": "1-15", "notes": "Welding face mask"}, {"file": "TM HelmetRobo I.png", "name": "Robo Helmet", "armor": "1-15", "notes": "Robot cop vibe"}, {"file": "TM HelmetScaryBunny E.png", "name": "Scary Bunny Helmet", "armor": "1-15", "notes": "Scary bunny"}, {"file": "TM HelmetTransmitter E.png", "name": "Transmitter Helmet", "armor": "1-15", "notes": "Reward/quest item"}, {"file": "TM HelmetTrooper I.png", "name": "Trooper Helmet", "armor": "1-15", "notes": "Variant exists"}, {"file": "TM HelmetTrooperBlood I.png", "name": "Trooper Helmet", "armor": "1-15", "notes": "Variant exists"}, {"file": "TM HelmetUnicorn I.png", "name": "Unicorn Helmet", "armor": "1-15", "notes": "Unicorn"}, {"file": "TM HelmetUrukhai I.png", "name": "Urukhai Helmet", "armor": "1-15", "notes": "Weird"}, {"file": "TM Metalhead E.png", "name": "Metalhead", "armor": "1-15", "notes": "Weird"}, {"file": "TM OrnamentHeadBlue.png", "name": "Ornament Helmet (Blue)", "armor": "1-15", "notes": "Comes in 3 other color variants"}, {"file": "TM OrnamentHeadGreen.png", "name": "Ornament Helmet (Green)", "armor": "1-15", "notes": "Comes in 3 other color variants"}, {"file": "TM OrnamentHeadRed.png", "name": "Ornament Helmet (Red)", "armor": "1-15", "notes": "Comes in 3 other color variants"}, {"file": "TM OrnamentHeadWhite.png", "name": "Ornament Helmet (White)", "armor": "1-15", "notes": "Comes in 3 other color variants"}, {"file": "TM SafariHelmet I.png", "name": "Safari Helmet", "armor": "1-15", "notes": "Explore the wild"}, {"file": "TM ScrapHat I.png", "name": "Scrap Hat", "armor": "1-15", "notes": "Metal rice sifting hat"}];
+    const COLUMNS = [
+      { key:"image", label:"Image" },
+      { key:"name", label:"Name" },
+      { key:"notes", label:"Notes" }
+    ];
 
-const pillsEl = document.getElementById("pills");
-const qEl = document.getElementById("q");
-const gridEl = document.getElementById("grid");
-const tableEl = document.getElementById("table");
-const theadEl = document.getElementById("thead");
-const tbodyEl = document.getElementById("tbody");
-const countBadge = document.getElementById("countBadge");
-
-let mode = "grid";
-let filter = "all";
-
-makePills(pillsEl, [
-  {label:"All", value:"all", selected:true},
-  {label:"Has notes", value:"notes"},
-  {label:"Unknown armor", value:"unknown"}
-], v => { filter=v; render(); });
-
-document.getElementById("gridBtn").addEventListener("click", ()=>{ mode="grid"; render(); });
-document.getElementById("tableBtn").addEventListener("click", ()=>{ mode="table"; render(); });
-qEl.addEventListener("input", render);
-
-function matches(item, q){
-  const hay = (item.name + " " + (item.notes||"") + " " + (item.armor||"")).toLowerCase();
-  if (q && !hay.includes(q)) return false;
-  if (filter === "notes" && !item.notes) return false;
-  if (filter === "unknown" && item.armor !== "??") return false;
-  return true;
-}
-
-function render(){
-  const q = qEl.value.trim().toLowerCase();
-  const items = DATA.filter(it => matches(it, q));
-  countBadge.textContent = items.length + " items";
-
-  if (mode === "table") {
-    gridEl.style.display = "none";
-    tableEl.style.display = "block";
-    theadEl.innerHTML = `<tr>
-      <th style="width:64px">Img</th>
-      <th>Name</th>
-      <th>Armor</th>
-      <th>Notes</th>
-    </tr>`;
-    tbodyEl.innerHTML = items.map(it => {
-      const img = officialFileUrl(it.file);
-      const href = officialPageUrl(it.name);
-      return `<tr>
-        <td><img src="${img}" alt="" style="width:44px;height:44px;object-fit:contain"/></td>
-        <td><a href="${href}" target="_blank" rel="noopener">${escapeHtml(it.name)}</a></td>
-        <td>${escapeHtml(it.armor)}</td>
-        <td>${escapeHtml(it.notes || "")}</td>
-      </tr>`;
-    }).join("");
-  } else {
-    tableEl.style.display = "none";
-    gridEl.style.display = "grid";
-    gridEl.innerHTML = items.map(it => {
-      const img = officialFileUrl(it.file);
-      const href = officialPageUrl(it.name);
-      return `<a class="card" href="${href}" target="_blank" rel="noopener">
-        <div class="thumb"><img src="${img}" alt=""/></div>
-        <div>
-          <h3>${escapeHtml(it.name)}</h3>
-          <div class="meta">Armor: ${escapeHtml(it.armor)}</div>
-          <div class="kv">
-            <span>${escapeHtml(it.notes || "—")}</span>
-          </div>
-        </div>
-      </a>`;
-    }).join("");
-  }
-}
-
-render();
-
+    renderPage({
+      title: "Helmets",
+      data: DATA,
+      columns: COLUMNS,
+      defaultView: "cards"
+    });
   </script>
 </body>
 </html>
